--- a/Changelog
+++ b/Changelog
@@ -222,6 +222,8 @@ Dungeon Generation
 - Mephisto's Lair: Gehennom level containing Mephisto
 - The Lord of the Foocubi's Lair: Gehennom level containing the Lord of the
   Foocubi.
+- Paxed's patches for additional Knox and Castle levels have been implemented,
+  resulting in several possible variants.
 
 New Monster Spells
 - Sonic Scream
