Added spellbook of web.

--- a/Changelog
+++ b/Changelog
@@ -261,6 +261,9 @@ New Items
 - Scroll of Pure Law
 - Scroll of True Neutrality
 - Scroll of Raw Chaos
+- Scroll of Time
+- Scroll of Web
+- Spellbook of Web
 - Wand of Healing
 - Wand of Wonder
 - Wand of Acid
