--- a/Changelog
+++ b/Changelog
@@ -355,6 +355,7 @@ New Monsters
 - Mind Flayer Telepath
 - Gnomish Psychic
 - Hundred Handed One
+- Magma elemental
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Infernal (Non-generated Race)
